--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "mobx-router-example",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "devDependencies": {
-    "react-scripts": "1.0.11"
+    "react-scripts": "1.0.14"
   },
   "dependencies": {
     "director": "1.2.8",
     "lodash": "4.17.4",
-    "mobx": "3.2.2",
-    "mobx-react": "3.5.9",
-    "mobx-router": "elektronik2k5/mobx-router#feature/upgrade-deps",
-    "react": "15.6.1",
-    "react-dom": "15.6.1"
+    "mobx": "3.3.1",
+    "mobx-react": "^4.3.3",
+    "mobx-router": "elektronik2k5/mobx-router#feature/add-mst",
+    "mobx-state-tree": "^1.0.1",
+    "react": "16.0.0",
+    "react-dom": "16.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
