--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "mobx-router-example",
   "version": "0.1.2",
   "devDependencies": {
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.1.1"
   },
   "dependencies": {
     "director": "1.2.8",
-    "lodash": "4.17.4",
-    "mobx": "3.3.1",
-    "mobx-react": "^4.3.3",
-    "mobx-router": "elektronik2k5/mobx-router#feature/add-mst",
-    "mobx-state-tree": "^1.0.1",
-    "react": "16.0.0",
-    "react-dom": "16.0.0"
+    "lodash": "^4.17.5",
+    "mobx": "^3.6.2",
+    "mobx-react": "^4.4.3",
+    "mobx-router": "elektronik2k5/mobx-router#ef42c3d",
+    "mobx-state-tree": "^1.4.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
