--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "mobx-router-example",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "devDependencies": {
-    "react-scripts": "1.1.4"
+    "react-scripts": "^1.1.4"
   },
   "dependencies": {
-    "director": "1.2.8",
-    "lodash": "^4.17.5",
-    "mobx": "^3.6.2",
-    "mobx-react": "^4.4.3",
-    "mobx-router": "elektronik2k5/mobx-router#671a73b",
-    "mobx-state-tree": "^1.4.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "lodash": "^4.17.10",
+    "mobx": "^4.3.0",
+    "mobx-react": "^5.1.2",
+    "mobx-router": "elektronik2k5/mobx-router#772fa74",
+    "mobx-state-tree": "^2.0.5",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
